--- a/style.css
+++ b/style.css
@@ -32,7 +32,8 @@ body{
 	--clr-blue: #1939d4;
 	--clr-white: rgba(255, 255, 255, .7);
 	--clr-shadow: rgba(0, 0, 0, .65);
-	background-color: #E9E6D9;
+	--clr-bg: #E9E6D9;
+	background-image: url(./Assets/BG0.png);
 }
 
 h3{
@@ -51,20 +52,20 @@ p{
 /*flex-box*/
 
 .container{
-	display:  flex;
+	display: flex;
 	width: 100vw;
 	height: 100vh;	
 	overflow: hidden;
 }
 
 .simulationSection{
-	flex: 1 1 58%;
+	flex: 1 1 55%;
 	align-content: center;
 	position: relative;
 }
 
 .manualSection{
-	flex: 1 1 42%;
+	flex: 1 1 45%;
 	overflow: hidden;	
 }
 
@@ -180,6 +181,13 @@ p{
 	justify-content: center;
 }
 
+.svgIcons{
+	width: 100%;
+	height: 1vh;
+	position: absolute;
+	top: 0;
+}
+
 .playIcon{
 	width: 60%;
 	height: 28%;	
@@ -205,7 +213,7 @@ p{
 	display:  flex;
 	margin-top: 8vh;	
 	/*slide movement*/
-	margin-left: -228px;	
+	margin-left: -5px;	
 	transition: margin-left 1.5s;
 }
 
