--- a/style-p2.css
+++ b/style-p2.css
@@ -29,6 +29,7 @@ body{
 	--viewportMarginRight: 2vw;
 	--viewportMarginRight2: 5.3vw;
 	--viewportMarginLeft: 4vw;
+	--checkIconSize: 15.5%;
 	--clr-blue: #1939d4;
 	--clr-white: rgba(255, 255, 255, .7);
 	--clr-shadow: rgba(0, 0, 0, .65);
@@ -143,6 +144,13 @@ p{
 }
 
 /*info panel*/
+.description {
+	display:  none;
+}
+
+.description.show {
+	display:  block;
+}
 
 .panelOne{
 	width: 5.5vh;
@@ -193,7 +201,7 @@ p{
 }
 
 #planelTwoText{
-	width: 70%;
+	width: 82%;
 	height: 30%;	
 	margin: 0 auto;
 	margin-top: 20.5%;
@@ -232,28 +240,26 @@ p{
     transform: translate(-50%, 0); 
 }
 
-.slide.one img{
-	left: 50%;
+.slide.x{
+	position: relative;
 }
 
-.slide.two img{
-	left: 50%;
+.checkIcon{
+	/*1:1 aspect ratio*/
+	height: var(--checkIconSize);
+	padding-right: var(--checkIconSize);
+
+	cursor: pointer;
+	z-index: 5;
+	position: absolute;
+	left: 90%;
+	bottom: var(--checkIconSize); 
 }
 
-.slide.three img{
-	left: 50%;
-}
-
-.slide.four img{
-	left: 50%;
-}
-
-.slide.five img{
-	left: 50%;
-}
-
-.slide.six img{
-	left: 50%;
+.checkIcon img{
+	height: 100%;
+	position: absolute;
+	top: 100%;
 }
 
 #phaseOne6{
