cover and end update
YCH

- add cover and ending pages
- add toggle function

--- a/style-p1.css
+++ b/style-p1.css
@@ -34,7 +34,7 @@ body{
 	--clr-white: rgba(255, 255, 255, .7);
 	--clr-shadow: rgba(0, 0, 0, .65);
 	--clr-bg: #E9E6D9;
-	background-image: url(Assets/BG0.png);
+	background-image: url(Assets/BG0.jpg);
 }
 
 h3{
@@ -197,7 +197,7 @@ p{
 .playIcon{
 	width: 60%;
 	height: 28%;	
-	transform: translate(10%, 0)
+	transform: translate(10%, 0);
 }
 
 #planelTwoText{
@@ -206,6 +206,35 @@ p{
 	margin: 0 auto;
 	margin-top: 20.5%;
 	transform: translate(7%, 0)
+}
+
+/*play icon status*/
+
+.c{
+	stroke: var(--clr-blue);
+	stroke-width: 0.3;
+}
+
+.cActive{
+	fill: var(--clr-blue);
+}
+
+.t{
+	fill: var(--clr-blue);
+}
+
+.tActive{
+	fill: white;
+}
+
+.t1{
+	stroke: var(--clr-blue);
+	stroke-width: 0.3;
+}
+
+.t1Active{
+	stroke: white;
+	stroke-width: 0.4;
 }
 
 /*slider*/
@@ -238,6 +267,7 @@ p{
 	position: absolute;
 	left: 50%; 
     transform: translate(-50%, 0); 
+    cursor: pointer;
 }
 
 .slide.x{
