--- a/style-p1.css
+++ b/style-p1.css
@@ -442,3 +442,31 @@ p{
 	color: white;
 	transform: scale(1.06);
 }
+
+@media (max-width: 900px){
+	body{
+		--viewportMarginRight2: 2em;
+	}
+
+	p{
+		font-size: .9em;
+	}
+
+	.button{
+		font-size: 1em;
+	}
+
+	.text{
+		left: 0%;
+		transform: translate(30%,2.3%);
+	}
+
+	.videox{
+		width: auto;
+		height: 50vh;	
+		position: absolute;
+		left: 50%;
+		top: 46%;
+  		transform: translate(-50%,-50%);   	  
+	}
+}
