--- a/style-p4.css
+++ b/style-p4.css
@@ -53,8 +53,8 @@ p{
 /*flex-box*/
 
 .container{
-	width: 100vw;
-	height: 100vh;	
+	width: 100%;
+	height: 100%;
 	overflow: hidden;
 	position: relative;
 }
