--- a/style.css
+++ b/style.css
@@ -53,8 +53,8 @@ p{
 /*flex-box*/
 
 .container{
-	width: 100vw;
-	height: 100vh;	
+	width: 100%;
+	height: 100%;	
 	overflow: hidden;
 	position: relative;
 }
@@ -213,19 +213,30 @@ p{
 		display: none;
 	}
 
-	.p2{
-		display: block;
-		font-size: .65em;
-		line-height: 1.6em;
+	.navigationBtn{
+		height: auto;
+		width: 100vw;
+		margin-right: 0;
+		margin-top: 0;
+		margin-bottom: 0;
+		gap: 1.3em;
+		position: fixed;
+		/*height*/
+		bottom: 4%;
+		right: 0;
 	}
 
 	.button{
 		font-size: 1em;
+		margin-bottom: 0;
+		margin-right: var(--viewportMarginRight2);
+		margin-left: var(--viewportMarginRight2);
 	}
 
 	.text{
-		left: 0%;
-		transform: translate(30%,2.3%);
+		width: 50vw;
+		height: auto;
+		margin-bottom: 0;
 	}
 
 	.videox{
@@ -233,7 +244,22 @@ p{
 		height: 50vh;	
 		position: absolute;
 		left: 50%;
-		top: 46%;
+		top: 41%;
   		transform: translate(-50%,-50%);   	  
+	}
+
+	.marginL{
+		font-size: .65em;
+		line-height: 1.6em;
+		margin-left: 2.8em;
+	}
+
+	.marginR{
+		margin-right: var(--viewportMarginRight2);
+	}
+
+	.moblieP{		
+		position: fixed;
+		bottom: 2.5%;
 	}
 }
