--- a/style-p4.css
+++ b/style-p4.css
@@ -279,24 +279,14 @@ p{
 
 	.button{
 		font-size: 1em;
+		margin-bottom: 0;
+		margin-right: var(--viewportMarginRight2);
+		margin-left: var(--viewportMarginRight2);
 	}
 
-	.text{
-		left: 50%;
-		transform: translate(-50%,0%);
-		bottom: 80%;
-		background: var(--clr-white);
-		height: 3.3em;
-		line-height: 1em;
-		padding-right: 0.6em;
-		padding-left: 0.6em;
-		border-radius: 10px;
-	}
-
-	.p2{
-		display: block;
-		font-size: .65em;
-		text-align: center;
+	.videos{
+		width: 100%;
+		height: 100%;
 	}
 
 	.videox{
@@ -317,13 +307,110 @@ p{
 	}
 
 	.navigationBtn{
-		right: 50%;
-		transform: translate(50%,0%);
+		height: auto;
+		width: 100vw;
 		margin-right: 0;
+		margin-top: 0;
+		margin-bottom: 0;
+		display: flex;		
+    	align-items: flex-start;
+		justify-content: space-between;
 		gap: 1.3em;
+		position: fixed;
+		/*height*/
+		bottom: 4%;
+		right: 0;
 	}
 
 	.nMove{
-		right: 50%;
+		right: 0%;
+	}
+
+	.instruction{
+		display: flex;
+		justify-content: center;
+		width: auto;		
+		position: fixed;
+		top: 5%;	
+		left: 50%;
+		transform: translate(-50%,0);	
+		margin-right: 0;		
+	}
+
+	.instruction img{
+		width: 60%;
+		transform: translate(0%,-5%);
+	}
+
+	.step.Active{
+		color: white;
+		background: var(--clr-blue);
+	}
+
+	.instruction2{
+		width: calc(100% - 4em);	
+		height: 10.6%;	
+		position: fixed;
+		top: 11%;	
+		left: 50%;
+		transform: translate(-50%,0);	
+		margin-right: 0;	
+	}
+
+	.step{
+		font-size: 1em;
+
+		line-height: 1.5em;
+		border-radius: 4px;
+		color: var(--clr-blue);
+	}
+
+	.step2{
+		position: relative;
+	}
+
+	.step2::before{	
+		content: '';
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		left: -35vw;
+		right: 0;
+		border-radius: 0.5em;
+		z-index: -1;
+		background: var(--clr-white);
+	}
+
+	.column{		
+		text-align: center;
+	}
+
+	.marginL{
+		margin-left: var(--viewportMarginRight2);
+	}
+
+	.marginL2{
+		margin-left: 35vw;
+	}
+
+	.marginR{
+		margin-right: var(--viewportMarginRight2);
+	}
+
+	h3{
+		font-size: 1em;		
+		margin-top: 0;
+	}
+
+	.moblieH3{
+		display: block;
+		position: fixed;
+		top: 0%;
+	}
+
+	.moblieP{		
+		display: block;	
+		position: fixed;
+		top: 0%;
 	}
 }
