User flow update
YCH

- update toggle and check relationship
- add project info

--- a/style-p1.css
+++ b/style-p1.css
@@ -444,12 +444,17 @@ p{
 }
 
 .moblieH3{
-		display: none;
-	}
+	display: none;
+}
 
-	.moblieP{		
-		display: none;	
-	}
+.moblieP{		
+	display: none;	
+}
+
+.limited{
+	opacity: 0.7;
+	pointer-events: none;
+}
 
 @media (max-width: 900px){
 	body{
