--- a/style-p1.css
+++ b/style-p1.css
@@ -33,6 +33,7 @@ body{
 	--clr-blue: #1939d4;
 	--clr-white: rgba(255, 255, 255, .7);
 	--clr-shadow: rgba(0, 0, 0, .65);
+	--clr-shadow2: rgba(15, 34, 128, .65);
 	--clr-bg: #E9E6D9;
 	background-image: url(Assets/BG0.jpg);
 }
@@ -215,12 +216,20 @@ p{
 	stroke-width: 0.3;
 }
 
+.cHover{
+	stroke-width: 0.35;
+}
+
 .cActive{
 	fill: var(--clr-blue);
 }
 
 .t{
 	fill: var(--clr-blue);
+}
+
+.tHover{
+	transform: scale(1.03) translate(-2.5%,-1.8%);
 }
 
 .tActive{
@@ -232,9 +241,13 @@ p{
 	stroke-width: 0.3;
 }
 
+.t1Hover{
+	stroke-width: 0.35;
+}
+
 .t1Active{
 	stroke: white;
-	stroke-width: 0.4;
+	stroke-width: 0.35;
 }
 
 /*slider*/
@@ -343,6 +356,10 @@ p{
 	border-radius: 1em;
 	background: white;
 	box-shadow: 0px 1px 10px 1px var(--clr-shadow);
+}
+
+#slider::-webkit-slider-thumb:hover{
+	box-shadow: 0px 1px 10px 1px var(--clr-shadow2);
 }
 
 /*Steps*/
@@ -456,7 +473,7 @@ p{
 	pointer-events: none;
 }
 
-@media (max-width: 900px){
+@media (max-width: 450px){
 	body{
 		--viewportMarginRight2: 2em;
 	}
